--- a/trunk/G1MoonPie/AndroidManifest.xml
+++ b/trunk/G1MoonPie/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".G1MoonPieActivity"
+            android:name=".MoonPieActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
