--- a/trunk/G1MoonPie/.project
+++ b/trunk/G1MoonPie/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>G1MoonPie</name>
+	<name>MoonPie</name>
 	<comment></comment>
 	<projects>
 	</projects>
