--- a/trunk/G1MoonPie/AndroidManifest.xml
+++ b/trunk/G1MoonPie/AndroidManifest.xml
@@ -5,6 +5,12 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="15" />
+    
+    <instrumentation android:name="android.test.InstrumentationTestRunner"
+    android:targetPackage="g1.MoonPie"
+    android:label="your tests label" />
+    
+
 
    <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -20,6 +26,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+            <uses-library android:name="android.test.runner" />
+        
     </application>
 
 </manifest>
