--- a/trunk/G1MoonPie/AndroidManifest.xml
+++ b/trunk/G1MoonPie/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
+            android:screenOrientation="portrait"
             android:name=".MoonPieActivity"
             android:label="@string/app_name" >
             <intent-filter>
