--- a/trunk/G1MoonPie/AndroidManifest.xml
+++ b/trunk/G1MoonPie/AndroidManifest.xml
@@ -17,6 +17,13 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        
+        <activity
+            android:name="MyActivity"
+            >
+        </activity>
+        
+        
         <activity
             android:screenOrientation="portrait"
             android:name=".MoonPieActivity"
