--- a/G1MoonPie/AndroidManifest.xml
+++ b/G1MoonPie/AndroidManifest.xml
@@ -23,6 +23,12 @@
             >
         </activity>
         
+         <activity
+            android:name=".DecisionLinesFormActivity"
+            android:label="@string/app_name" 
+            android:screenOrientation="landscape">
+            </activity>
+        
         
         <activity
             android:screenOrientation="portrait"
