--- a/trunk/G1MoonPie/AndroidManifest.xml
+++ b/trunk/G1MoonPie/AndroidManifest.xml
@@ -19,7 +19,9 @@
         android:label="@string/app_name" >
         
         <activity
-            android:name="MyActivity"
+            android:name="CompleteDecisionActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             >
         </activity>
         
