--- a/G1MoonPie/.settings/org.eclipse.ltk.core.refactoring.prefs
+++ b/G1MoonPie/.settings/org.eclipse.ltk.core.refactoring.prefs
@@ -1,2 +1,3 @@
+#Tue May 01 04:54:01 EDT 2012
 eclipse.preferences.version=1
 org.eclipse.ltk.core.refactoring.enable.project.refactoring.history=false
